いろいろなHTML要素の画像追加

--- a/frontend/src/tutorial/control-structure/index.html
+++ b/frontend/src/tutorial/control-structure/index.html
@@ -13,9 +13,8 @@
           <!-- <sub>by ut.code();</sub> -->
           <nav>
             <ul class="nav-links">
-                <li><a href="./..">トップページに戻る</a></li>
+                <li><a href="/tutorial">チュートリアル一覧へ</a></li>
                 <li id="header-help"><a>ヘルプ</a></li>
-                <li><a href="#">Q&A</a></li>
             </ul>
           </nav>
         </div>
@@ -81,7 +80,7 @@
                     もし最初からやり直したいときは、すべてのブロックを削除して、ページを再読み込みしてください。
                   </p>
                 </section>
-                <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images">
+                <!-- <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images"> -->
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: flex;">
                 <section class="silde-text-with-images">
@@ -93,7 +92,6 @@
 
                   </p>
                 </section>
-                <img src="<%= require('/src/images/various-html-elements_1.png') %>" alt="Sample Image" class="slide-images">
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: flex;">
                 <section class="silde-text-with-images">
@@ -120,7 +118,7 @@
                     <li><code>&lt;div&gt;</code>の属性にstyle="flex"を指定すると、その<code>&lt;div&gt;</code>の中にある要素を横方向に並べることができます。</li>
                   </ol>
                 </section>
-                <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images">
+                <!-- <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images"> -->
               </div>
             </div>
             <div id="popup-navigation">
