--- a/frontend/src/tutorial/html-introduction/index.html
+++ b/frontend/src/tutorial/html-introduction/index.html
@@ -14,9 +14,8 @@
           <!-- <sub>by ut.code();</sub> -->
           <nav>
             <ul class="nav-links">
-                <li><a href="./..">トップページに戻る</a></li>
+                <li><a href="/tutorial">チュートリアル一覧へ</a></li>
                 <li id="header-help"><a>ヘルプ</a></li>
-                <li><a href="#">Q&A</a></li>
             </ul>
           </nav>
         </div>
