DOM操作チュートリアルを修正

--- a/frontend/src/tutorial/variables-and-functions/index.html
+++ b/frontend/src/tutorial/variables-and-functions/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>いろいろなHTML要素</title>
+    <title>変数と関数</title>
     <link rel="icon" href="<%= require('/src/images/icon.svg') %>">
   </head>
   <body>
