--- a/frontend/src/tutorial/omikuji/index.html
+++ b/frontend/src/tutorial/omikuji/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>チュートリアル：おみくじ</title>
+    <title>おみくじ</title>
+    <link rel="icon" href="<%= require('/src/images/icon.svg') %>" />
   </head>
   <body>
     <div id="content" style="visibility: hidden">
@@ -12,15 +13,9 @@
           <!-- <sub>by ut.code();</sub> -->
           <nav>
             <ul class="nav-links">
-              <li><a href="./..">トップページに戻る</a></li>
+              <li><a href="/tutorial">チュートリアル一覧へ</a></li>
               <li id="header-help"><a>ヘルプ</a></li>
-              <li><a href="#">Q&A</a></li>
             </ul>
-            <div class="hamburger">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
           </nav>
         </div>
       </header>
