--- a/frontend/src/tutorial/todo/index.html
+++ b/frontend/src/tutorial/todo/index.html
@@ -62,18 +62,26 @@
             <div id="popup-title">Todoリストを作ろう</div>
             <div id="popup-close">×</div>
             <div id="popup-button-container">
-              <button class="popup-buttons" id="popup-button-0">todoの内容を入れられるようにする</button>
+              <button class="popup-buttons" id="popup-button-0">目標</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-1">Todoリストの追加</button>
+              <button class="popup-buttons" id="popup-button-1">Todoの内容を入れられるようにする</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-2">Todoリストの削除</button>
+              <button class="popup-buttons" id="popup-button-2">Todoリストの追加</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-3">Todoリストの編集</button>
+              <button class="popup-buttons" id="popup-button-3">Todoリストの削除</button>
             </div>
             <div id="popup-message">
               <!-- ここにスライドコンテンツを表示 -->
               <div class="popup-slides" id="popupSlide-0">
                 <section id="popup-slide-content-0">
+                  <p>
+                    項目が追加、削除ができるTodoアプリを作ってみましょう！<Br>
+                    余力のある人は自力でチャレンジしてみましょう！
+                  </p>
+                </section>
+              </div>
+              <div class="popup-slides" id="popup-slide-1" style="display: none;">
+                <section>
                   <h2>
                     構造
                   </h2>
@@ -85,18 +93,17 @@
                       <li>Todoリストを追加、削除するボタンを作る</li>
                     </ul>
                     この３つが挙げられます。<br>
-                    まずリストを作る元となる <code class="popup-code">&lt;ul&gt;</code>タグと、テキストを入れる場所を作る<code class="popup-code">&lt;input&gt;</code>タグを<code class="popup-code">&lt;body&gt;</code>タグに入れてみましょう。
                   </p>
                   <h2>IDでタグ付け</h2>
                   <p>
-                    次に、<code class="popup-code">&lt;input&gt;</code>、<code class="popup-code">&lt;button&gt;</code>、<code class="popup-code">&lt;ul&gt;</code>にIDブロックをつけましょう。<br>
-                    IDをつけることによって、この後行うJavaScriptを用いた作業でこれらのタグに色々な機能をつけることができます。<br>
+                    はじめに、<code class="popup-code">&lt;input&gt;</code>、<code class="popup-code">&lt;button&gt;</code>、<code class="popup-code">&lt;ul&gt;</code>にIDブロックをつけましょう。<br>
+                    IDをつけることによって、この後行う制御フォルダを用いた作業でこれらのタグに色々な機能をつけることができます。<br>
                     IDの名前は今回は<code class="popup-code">&lt;input&gt;</code>にtodo-input,<code class="popup-code">&lt;button&gt;</code>にadd-button、<code class="popup-code">&lt;ul&gt;</code>にtodo-listと入れることにしましょう。
                   </p>
                 </section>
                 <img src ="<%= require('/src/images/todo_1.png')%>"alt="Description of image" class="slide-images"></img> 
               </div>
-              <div class="popup-slides" id="popup-slide-1" style="display: none;">
+              <div class="popup-slides" id="popup-slide-2" style="display: none;">
                 <section>
                   <p>
                     次に、押すことでTodoリストを追加できるようなボタンを作りましょう。<br>
@@ -115,7 +122,7 @@
                   </p>
                 </section>
               </div>
-              <div class="popup-slides" id="popup-slide-2" style="display: none;">
+              <div class="popup-slides" id="popup-slide-3" style="display: none;">
                 <section>
                   <p>
                     次に、削除ボタンをTodoリストに追加しましょう。<br>
@@ -126,14 +133,6 @@
                     </ul>
                     とすればいいですね。<br>
                   </p>
-                </section>
-              </div>
-              <div class="popup-slides" id="popup-slide-3" style="display: none;">
-                <section>
-                    <p>
-                      最後に、作ったTodoリストを編集できるようにしましょう。<br>
-                      削除ボタンを作ったときと同様に編集ボタンを作ります。<br>
-                    </p>
                 </section>
               </div>
             </div>
