codeたぐで囲ったりしました

--- a/frontend/src/tutorial/dom-manipulation/index.html
+++ b/frontend/src/tutorial/dom-manipulation/index.html
@@ -93,14 +93,14 @@
                   <p>
                     <b>DOM</b>(Document Object Model)とは、HTMLの構造を表現したものです。<br>
                     このDOMを通して、HTML内の要素を取り出したり、その取り出した要素を変更したり、また新たに要素を追加することができます。<br>
-                    DOMの操作はJavascriptで行われます。つまり&lt;script&gt;タグ内にブロックを配置するということです。<br>
+                    DOMの操作はJavascriptで行われます。つまり<code class="popup-code">&lt;script&gt;</code>タグ内にブロックを配置するということです。<br>
                   </p>
                   <h3>要素にアクセス</h3>
                   <p>
                     では実際に要素を取得してみましょう。ここでは、idを使った方法を紹介します。　右の写真を参考にしてください。<br>
-                    取得したいHTML要素（ここでは&lt;div&gt;）にあらかじめid属性を設定しておきます。そして、&lt;script&gt;タグ内で「id="　"の要素」ブロックを利用します。<br>
+                    取得したいHTML要素（ここでは<code class="popup-code">&lt;div&gt;</code>）にあらかじめ<code class="popup-code">id</code>属性を設定しておきます。そして、<code class="popup-code">&lt;script&gt;</code>タグ内で「id="　"の要素」ブロックを利用します。<br>
                     ここで注意したいのが、「id="　"の要素」ブロックで取得したものは、単なる文字列ではなく、様々な要素の情報を含んでいるということです。この中から要素内の文章を取り出すために、「要素～の文章」ブロックを使いましょう。<br>
-                    これを「アラート」ブロックにくっつけて、&lt;script&gt;タグ内に入れましょう。&lt;div&gt;の中身が表示されるはずです。<br>
+                    これを「アラート」ブロックにくっつけて、<code class="popup-code">&lt;script&gt;</code>タグ内に入れましょう。<code class="popup-code">&lt;div&gt;</code>の中身が表示されるはずです。<br>
                     ちなみに、「id="　"の要素」ブロックで取得した要素は、変数にセットすることもできます。必要であればセットしておきましょう。<br>
                   </p>
                 </section>
@@ -113,7 +113,7 @@
                     次は、ボタンを押したときに要素を変更する方法を学びましょう。<br>
                     「～にイベント～が発生したとき」ブロックを使います。空欄には、取得した要素を入れます。ブロックの中身は、設定した要素に指定したイベントが発生したときに実行されます。<br>
                     ここでは、ボタンを押したときにアラートを出してみましょう。右の写真を参考にしてください。<br>
-                    まず、要素を取得して空欄に入れます。次に、ブロックの中身にアラートを設置して、&lt;script&gt;タグ内に入れましょう。ボタンを押すとアラートが表示されるはずです。<br>
+                    まず、要素を取得して空欄に入れます。次に、ブロックの中身にアラートを設置して、<code class="popup-code">&lt;script&gt;</code>タグ内に入れましょう。ボタンを押すとアラートが表示されるはずです。<br>
                   </p>
                 </section>
                 <img src="<%= require('/src/images/dom-manipulation_2.png') %>" class="slide-images">
@@ -125,7 +125,7 @@
                     それでは、イベント処理の中身を変更してみましょう。<br>
                     ここでやりたいことは、ボタンを押したときに、要素内の文章を変更することです。<br>
                     これを行うためには、「～に～を代入」ブロックを使います。左の空欄には、取得した要素の文章を入れます。右の空欄には、ボタンを押したら表示される文章を入れます。<br>
-                    これを「～にイベント～が発生したとき」ブロックにくっつけて、&lt;script&gt;タグ内に入れましょう。ボタンを押すと、要素内の文章が変わるはずです。<br>
+                    これを「～にイベント～が発生したとき」ブロックにくっつけて、<code class="popup-code">&lt;script&gt;</code>タグ内に入れましょう。ボタンを押すと、要素内の文章が変わるはずです。<br>
                   </p>
                   <h3>実行</h3>
                   <p>
