--- a/frontend/src/tutorial/omikuji/index.html
+++ b/frontend/src/tutorial/omikuji/index.html
@@ -84,8 +84,8 @@
                 <section>
                   <h3>ボタンと表示する場所の作成</h3>
                   <p>
-                    &emsp;まずはボタンを作ってボタンのなかにテキストを入力してid属性を設定しましょう。それができたら&lt;div&gt;を用いて結果を表示する場所を作りましょう。<br>
-                    この&lt;div&gt;要素の中身を書き換えることで結果を表示したいのでこの&lt;div&gt;要素にもidを設定しましょう。
+                    &emsp;まずはボタンを作ってボタンのなかにテキストを入力するのと、id属性を設定しましょう。それができたら<code class="popup-code">&lt;div&gt;</code>を用いて結果を表示する場所を作りましょう。<br>
+                    この<code class="popup-code">&lt;div&gt;</code>要素の中身を書き換えることで結果を表示したいのでこの<code class="popup-code">&lt;div&gt;</code>要素にもidを設定しましょう。
                   </p>
                   <h3>DOM操作</h3>
                   <p>
