--- a/frontend/src/tutorial/control-structure/index.html
+++ b/frontend/src/tutorial/control-structure/index.html
@@ -13,10 +13,10 @@
           <!-- <sub>by ut.code();</sub> -->
           <nav>
             <ul class="nav-links">
-                <li><a href="./..">トップページに戻る</a></li>
-                <li id="header-help"><a>ヘルプ</a></li>
-                <li><a href="#">Q&A</a></li>
-            </ul>
+              <li><a href="./..">トップページに戻る</a></li>
+              <li id="header-help"><a>ヘルプ</a></li>
+              <li><a href="#">Q&A</a></li>
+          </ul>
           </nav>
         </div>
       </header>
@@ -59,29 +59,26 @@
             <div id="popup-title">いろいろなHTML要素</div>
             <div id="popup-close">×</div>
             <div id="popup-button-container">
-              <button class="popup-buttons" id="popup-button-0">目標</button>
+              <button class="popup-buttons" id="popup-button-0">繰り返しとは</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-1">HTML要素の詳細</button>
+              <button class="popup-buttons" id="popup-button-1">条件分岐とは</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-2">HTML属性とは</button>
+              <button class="popup-buttons" id="popup-button-2">モデル:カウントダウン</button>
               <span class="popup-arrow">➡️</span> 
-              <button class="popup-buttons" id="popup-button-3">完成</button>
+              <button class="popup-buttons" id="popup-button-3">モデルの説明</button>
             </div>
             <div id="popup-message">
               <!-- ここにスライドコンテンツを表示 -->
               <div class="popup-slides" id="popupSlide-0" style="display: flex">
                 <section class="silde-text-with-images">
-                  <h3>目標</h3>
+                  <h3>条件分岐</h3>
                   <p>
-                    様々なHTML要素を使って、右の写真のようなサイトを作ってみよう！
-                  </p>
-                  <h3>詳細</h3>
-                  <p>
-                    すでに設置されているブロックを利用して、テキストボックスや文章を変更しましょう。<br>
-                    もし最初からやり直したいときは、すべてのブロックを削除して、ページを再読み込みしてください。
+                    条件分岐文は与えられた条件が満たされる場合と満たさない場合で処理を変えることができます。<br>
+                    条件が満たされるとき、真を意味するTrueという<strong>値</strong>、満たされないときは偽を意味するFalseという<strong>値</strong>を出します。<br>
+                    条件が満たされなかった場合、その中でまた他の条件を設定して処理を分けることもできます。<br>
                   </p>
                 </section>
-                <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images">
+                <img src="<%= require('/src/images/control_structure_1.png') %>" alt="Sample Image" class="slide-images">
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: flex;">
                 <section class="silde-text-with-images">
@@ -93,7 +90,7 @@
 
                   </p>
                 </section>
-                <img src="<%= require('/src/images/various-html-elements_1.png') %>" alt="Sample Image" class="slide-images">
+                <img src="<%= require('/src/images/control_structure_2.png') %>" alt="Sample Image" class="slide-images">
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: flex;">
                 <section class="silde-text-with-images">
@@ -120,7 +117,10 @@
                     <li><code>&lt;div&gt;</code>の属性にstyle="flex"を指定すると、その<code>&lt;div&gt;</code>の中にある要素を横方向に並べることができます。</li>
                   </ol>
                 </section>
-                <img src="<%= require('/src/images/various-html-elements_0.png') %>" alt="Sample Image" class="slide-images">
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                  <video src="<%= require('/src/images/control_structure_1.mp4') %>" controls class="slide-images" style="display: flex;"></video>
+                  <img src="<%= require('/src/images/control_structure_3.png') %>" alt="Sample Image" class="slide-images" style="scale: 1.5;">
+                </div>
               </div>
             </div>
             <div id="popup-navigation">
