間違ってmainマージをこのブランチでやらずに死にかけた

--- a/frontend/src/tutorial/css-introduction/index.html
+++ b/frontend/src/tutorial/css-introduction/index.html
@@ -13,9 +13,8 @@
           <!-- <sub>by ut.code();</sub> -->
           <nav>
             <ul class="nav-links">
-                <li><a href="./..">トップページに戻る</a></li>
+                <li><a href="/tutorial">チュートリアル一覧へ</a></li>
                 <li id="header-help"><a>ヘルプ</a></li>
-                <li><a href="#">Q&A</a></li>
             </ul>
           </nav>
         </div>
@@ -60,11 +59,11 @@
             <div id="popup-close">×</div>
             <div id="popup-button-container">
               <button class="popup-buttons" id="popup-button-0">CSSとは</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-1">実際にやってみよう</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-2">様々なCSSを同時に使ってみよう</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-3">ヒント</button>
             </div>
             <div id="popup-message">
