Javascriptという単語を消した

--- a/frontend/src/tutorial/todo/index.html
+++ b/frontend/src/tutorial/todo/index.html
@@ -108,7 +108,7 @@
                       <li><code class="popup-code">&lt;input&gt;</code>の中に入れた文章を<code class="popup-code">&lt;li&gt;</code>の中に入れる</li>
                     </ul>
                     この２つがしたいですね。<br>
-                    ここでJavascriptを用いてクリックしたら<br>
+                    ここで制御フォルダを用いてクリックしたら<br>
                     <ul>
                       <li>要素名liを追加する</li>
                       <li>追加した要素の内容を<code class="popup-code">&lt;input&gt;</code>の内容に変更する</li>
