表計算のチュートリアルを修正

--- a/frontend/src/tutorial/todo/index.html
+++ b/frontend/src/tutorial/todo/index.html
@@ -9,7 +9,8 @@
     <div id="content" style="visibility: hidden;">
       <header>
         <div class="header-container">
-          <a href="#" class="header-logo">Blosite</a>
+          <div class="header-logo">
+            <img id="header-icon" src="<%= require('/src/images/icon.svg') %>">Blosite</div>
           <!-- <sub>by ut.code();</sub> -->
           <nav>
             <ul class="nav-links">
