HTMLについて知ろうの画像修正

--- a/frontend/src/tutorial/html-introduction/index.html
+++ b/frontend/src/tutorial/html-introduction/index.html
@@ -121,7 +121,7 @@
                   <code class="popup-code">&lt;ul&gt;</code>ブロックは<code class="popup-code">&lt;h1&gt;</code>ブロックの下にくっつけて、<code class="popup-code">&lt;li&gt;</code>ブロックは右の写真のように<code class="popup-code">&lt;ul&gt;</code>ブロックの中に入れます。
                 </p>
                 </section>
-                <img src ="<%= require('/src/images/kuttukekata.png')%>"alt="Description of image" class="slide-images"></img>
+                <img src ="<%= require('/src/images/kuttukekata.png')%>"alt="Description of image" class="slide-images" style="max-height: 350px"></img>
               </div>
             </div>
             <div id="popup-navigation">
