繰り返しと条件分岐を修正

--- a/frontend/src/tutorial/various-html-elements/index.html
+++ b/frontend/src/tutorial/various-html-elements/index.html
@@ -102,7 +102,7 @@
                   <h3>HTML属性</h3>
                   <p>
                     HTML属性とは、HTML要素に付けることができる追加情報のことです。HTML属性のカテゴリーを開いてどんなものがあるか見てみましょう。<br>
-                    HTML属性は右のように要素に対して組み付けることができます。ここでは<code class="popup-code">&lt;input&gt;</code>要素の<code class="popup-code">type</code>属性について詳しく見てみましょう。<br>
+                    HTML属性は下のように要素に対して組み付けることができます。ここでは<code class="popup-code">&lt;input&gt;</code>要素の<code class="popup-code">type</code>属性について詳しく見てみましょう。<br>
                     <code  class="popup-code">type="text"</code>（デフォルトの設定）だと文字の入力欄、<code class="popup-code">type="number"</code>だと数字の入力欄、<code  class="popup-code">type="checkbox"</code>だとチェックボックスになります。<br>
                     また、HTML属性は１つの要素に複数個つけることができます。例えば、<code  class="popup-code">placeholder</code>属性を付け加えると、入力欄に何を入力すればいいかヒントを表示することができます。<code  class="popup-code">style</code>属性では、見た目を自在に変更することができます！（詳しくは次のチュートリアルでやりましょう）<br>
                   </p>
