--- a/frontend/src/tutorial/control-structure/index.html
+++ b/frontend/src/tutorial/control-structure/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>いろいろなHTML要素</title>
+    <title>繰り返しと条件分岐</title>
     <link rel="icon" href="<%= require('/src/images/icon.svg') %>">
   </head>
   <body>
@@ -59,11 +59,11 @@
             <div id="popup-close">×</div>
             <div id="popup-button-container">
               <button class="popup-buttons" id="popup-button-0">条件分岐とは</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-1">繰り返しとは</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-2">モデル:カウントダウン</button>
-              <span class="popup-arrow">➡️</span> 
+              <span class="popup-arrow">&#x27A1;</span> 
               <button class="popup-buttons" id="popup-button-3">モデルの説明</button>
             </div>
             <div id="popup-message">
@@ -77,7 +77,7 @@
                     条件が満たされなかった場合、その中でまた他の条件を設定して処理を分けることもできます。<br>
                   </p>
                 </section>
-                <img src="<%= require('/src/images/control_structure_1.png') %>" alt="Sample Image" class="slide-images">
+                <img src="<%= require('/src/images/control_structure_1.png') %>" alt="Sample Image" class="slide-images" style="max-height: 350px;">
               </div>
               <div class="popup-slides" id="popup-slide-1" style="display: flex;">
                 <section class="silde-text-with-images">
@@ -92,9 +92,10 @@
               </div>
               <div class="popup-slides" id="popup-slide-2" style="display: flex;">
                 <section class="silde-text-with-images">
+                  <h3>挙動の予想</h3>
                   <p>
                     今回は置かれているブロックがどのように動くのか予想してみましょう。<br>
-                    一度このヘルプを閉じて右に何が表示されるのか考えてみましょう。<br>
+                    一度このヘルプを閉じ、実行アイコンを押した後、右のプレビューの「発射ボタン」を押すと何が表示されるのか考えてみましょう。<br>
                     緑の繰り返し、グレーの条件分岐のブロックに注目して考えてみましょう。<br><br>
                     (注:iは最初が0で、処理を終えると1増える仕組みです。)
                   </p>
